force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__Active__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only Active Product Index records will be used. This allows for new records to be created, while leaving the old ones in place until the index batch job is complete.</description>
    <inlineHelpText>Only Active Product Index records will be used. This allows for new records to be created, while leaving the old ones in place until the index batch job is complete.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>