force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__FilterData__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FilterData__c</fullName>
    <description>The product spec key and spec values.</description>
    <inlineHelpText>The product spec key and spec values.</inlineHelpText>
    <label>Filter Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>