force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__IndexCurrency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IndexCurrency__c</fullName>
    <description>The corresponding currency code, ONLY used to assist in batch creation of the index records. NOTE: When using a &quot;Master Price List&quot; this value will be set to GLOBAL, and be currency agnostic.</description>
    <inlineHelpText>The corresponding currency code, ONLY used to assist in batch creation of the index records. NOTE: When using a &quot;Master Price List&quot; this value will be set to GLOBAL, and be currency agnostic.</inlineHelpText>
    <label>Index Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>