force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__IndexPrice__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IndexPrice__c</fullName>
    <description>A single indexed Price for the associated product. Primarily used for sorting on the Product List Page.</description>
    <externalId>true</externalId>
    <inlineHelpText>A single indexed Price for the associated product. Primarily used for sorting on the Product List Page.</inlineHelpText>
    <label>Index Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>