force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__IndexType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IndexType__c</fullName>
    <description>The type of index, possible values SEARCH, CATEGORY (Base 64 Encoded). Necessary for unique filtering on SOSL searches.</description>
    <inlineHelpText>The type of index, possible values SEARCH, CATEGORY (Base 64 Encoded)</inlineHelpText>
    <label>Index Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>