force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__LastIndex__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LastIndex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is only used for tracking purposes during batch job creation.</description>
    <inlineHelpText>This field is only used for tracking purposes during batch job creation.</inlineHelpText>
    <label>Last Index</label>
    <type>Checkbox</type>
</CustomField>