force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__LongDescription__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LongDescription__c</fullName>
    <description>The product long description. By default, the index uses the LongDescRT__c field on the CC Product object. If the LongDescRT__c field is empty, then the index will use the LongDesc__c field instead.</description>
    <inlineHelpText>The product long description. By default, the index uses the LongDescRT__c field on the CC Product object. If the LongDescRT__c field is empty, then the index will use the LongDesc__c field instead.</inlineHelpText>
    <label>Long Description</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>