force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__PriceLists__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PriceLists__c</fullName>
    <description>A complete list of CC Price List SFIDs separated by a single space, to which the product belongs.</description>
    <inlineHelpText>A complete list of CC Price List SFIDs separated by a single space, to which the product belongs.</inlineHelpText>
    <label>Price Lists</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>