force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>ccrz__E_ProductCategory__c</referenceTo>
    <relationshipLabel>CC Product Indices</relationshipLabel>
    <relationshipName>ProductIndices</relationshipName>
    <type>Lookup</type>
</CustomField>