force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__ProductName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductName__c</fullName>
    <description>The localized Product Name. Used for sort order and performing SOSL search against a product.</description>
    <externalId>true</externalId>
    <inlineHelpText>The localized Product Name. Used for sort order and performing SOSL search against a product.</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>