force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__SEOKeywords__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SEOKeywords__c</fullName>
    <description>The text used within meta tags on the product detail page to help drive search engine optimization.</description>
    <inlineHelpText>The text used within meta tags on the product detail page to help drive search engine optimization.</inlineHelpText>
    <label>SEO Keywords</label>
    <length>150</length>
    <type>Text</type>
</CustomField>