force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDescription__c</fullName>
    <description>The localized Product Short Description. Used for performing SOSL search against a product.</description>
    <inlineHelpText>The localized Product Short Description. Used for performing SOSL search against a product.</inlineHelpText>
    <label>Short Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>