force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__SKU__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SKU__c</fullName>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>