force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ERP_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_Description__c</fullName>
    <label>ERP Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>