force-app/main/default/objects/ccrz__E_ProductIndex__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__Product__c</columns>
    <columns>ccrz__ProductName__c</columns>
    <columns>ccrz__IndexPrice__c</columns>
    <columns>ccrz__SKU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>